# wx12Ton

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  README.de  TODO  aclocal.m4  configure  configure.in
algo/: Makefile.am  Makefile.in  find_series.cc  find_series.h  midi_file.cc  midi_file.h  series.cc  series.h
documentation/CVS/: Entries  Repository
documentation/guile-interface/: x12ton.html
documentation/guile-interface/CVS/: Entries  Repository  Root
documentation/guile-interface/examples/: .cvsignore  algorithm-symmetry.scm  x12ton-find-series  x12ton-str2mid  x12ton-test-interface
documentation/guile-interface/examples/CVS/: Entries  Repository
documentation/source/: .cvsignore  Doxyfile  doxy_foot.html
documentation/source/CVS/: Entries  Repository
documentation/source/html/: annotated.html  classCompactSeries-members.html  classCompactSeries.html  classNote-members.html  classNote.html  classSeries-members.html  classSeries.html  classSeries__IO-members.html  classSeries__IO.html  classSortedCS-members.html  classSortedCS.html  files.html  find__series_8h.html  functions.html  functions_enum.html  functions_eval.html  functions_func.html  functions_type.html  index.html  midi__file_8h.html  series_8h.html
guile-interface/: Makefile.am  Makefile.in  enc_scm.cc  enc_scm.h  guile_helper.h  libguile-12ton.cc  libguile-12ton.h  x12ton.scm
playmus_12T/: Makefile.am  Makefile.in  playmus_12T.c
wx-interface/: Makefile.am  Makefile.in  algorithms.cc  algorithms.h  enter_series.cpp  enter_series.h  flush_relat.cpp  flush_relat.h  forms.cpp  forms.h  frame.cpp  frame.h  helper.h  icon.cpp  icon.h  ids.h  list_relat.cpp  list_relat.h  menu.inc  playfile.cpp  playfile.h  pretty_sizer.h  series_io.cpp  series_io.h  series_widget.cpp  series_widget.h  timed_yield.h  tonal_widget.cpp  tonal_widget.h  wx12Ton.cpp  wx12Ton.h  wx12Ton.rc  wxfile_stl.h
wx-interface/po/: Makefile.am  Makefile.in  de.po  u  wx12Ton.pot
wx-interface/po/de/: wx12Ton.mo
